solutions/secure-mesh/exchange.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "exchange"
spec:
  selector:
    matchLabels:
      app: exchange
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
    - to:
      - operation:
          methods: ["POST"]
          ports: ["8080"]
          paths: ["/currencies", "/exchangeRate/singleCurrency", "/exchangeRate/historicalData"]
