solutions/secure-mesh/ns-restricted.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "ns-restricted"
spec:
  selector:
    matchLabels:
      "ns-restricted": "true"
  rules:
  - from:
    - source:
        namespaces: ["secure-mesh"]
